# monte-carlo

./: pyproject.toml
events-rental/: Qubes' Model - v4.xlsx  fleet-sizing-simulation-experimental.ipynb  fleet-sizing-simulation.ipynb  peak-demand-simulation.py  scenario-calendar-optimized.py  scenario-calendar-sim.ipynb  scenario-calendar.ipynb  scenario-calendar.py
